# ECR-Scan-Findings-Generator

./: Makefile  README.md  app.py  cdk.json  pyproject.toml  sample.json
cdk.out/: ECRImageScanFindingsStack.template.json  manifest.json  tree.json
cdk.out/asset.245927670a00978a7f8ded39006ff4b32f8c113fcfb4e8ea0f1ed1b2c69136e8/: app.py
cdk.out/asset.298d0d70ff77ac38a95ed7650e0204cb8e107c325bb7f031a91f8aa367fb91ce/: app.py
cdk.out/asset.298d0d70ff77ac38a95ed7650e0204cb8e107c325bb7f031a91f8aa367fb91ce/chardet-4.0.0.dist-info/: RECORD
cdk.out/asset.4a61de6e0c6f09053cbcdafc080f2563d1d69c74908f1d52212507bedd381909/: app.py
cdk.out/asset.510cdf5d484416203e3860ed8ee1915475d7a5403f64137ed92dddf48873fe5d/: app.py
cdk.out/asset.529a9dbf339af0f2990df310184ff7f630ca769bcbe945beb275a78dc08f1380/: app.py
cdk.out/asset.6bd3e4075d00169823f7999ea424ec6e8498bf8701c2397541c6135c57abe5bf/: app.py
cdk.out/asset.9125fb52f852f77174bb544762a760466435910b3a37ea3f0dbf809a246e633a/: app.py
cdk.out/asset.d48a466df6aa9f08ac9841b7b06e7402daeefea3a1fee5ba1e9cff4758224f6b/: app.py
cdk.out/asset.e29f846fbd3d83d6fc6cf16d779f1095fb56b8d49fc99a41901e8080743aa2f1/: app.py
cdk.out/asset.f406097c64d6b56a662c8fe8e313fa599703ec0334a7783ed8873e407455cf29/: app.py
cdk.out/asset.f82816828691020e634af58d447d5dd2812ad288edce9eed07fc678b447d83a4/: app.py
ecr_image_scan_findings/: ecr_image_scan_findings.py
ecr_image_scan_findings/lambda/: pyproject.toml  template.yaml
ecr_image_scan_findings/lambda/.aws-sam/: build.toml
ecr_image_scan_findings/lambda/image_findings/: app.py
